# my-first-vds

./: .gitignore  README.md  clean-sys.sh  index.sh  install.sh  local-init.sh  myhelp.sh  preinstall.sh  pyproject.toml  requirements.txt  sysinfo.sh  wg-install.sh  zt-add-network.sh  zt-cleanup.sh  zt-client-test.sh  zt-diagnose.sh  zt-install.sh  zt-reconcile.py  zt-watchdog.sh
docs/: zt-auto-join-plan.md
src/: main.py
src/core/: lock.py  logger.py  shell.py
src/coturn/: install.py
src/sysinfo/: dashboard.py
src/system/: cleanup.py  setup.py
src/wireguard/: install.py
src/zerotier/: add_network.py  api.py  cleanup.py  diagnose.py  install.py  nat.py  reconcile.py  watchdog.py
systemd/: vds-reconcile.service  vds-reconcile.timer  vds-watchdog.service  vds-watchdog.timer
