[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vds-cli"
version = "1.0.0"
description = "VDS Management & ZeroTier Orchestrator"
readme = "README.md"
authors = [
    { name = "ASV" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "questionary>=2.0.0"
]
requires-python = ">=3.10"

[project.scripts]
vds = "src.main:app"

[tool.setuptools.packages.find]
include = ["src*"]
